force-app/main/default/objects/Firmante_de_Consentimiento__c/Firmante_de_Consentimiento__c.object-meta.xml
<CustomObject>
    <label>Firmante de Consentimiento</label>
    <nameField>
        <label>Nombre de Firmante de Consentimiento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Firmantes de Consentimiento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>