force-app/main/default/objects/Firmante_de_Consentimiento__c/fields/Correo_electronico__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico__c</fullName>
    <label>Correo electronico</label>
    <length>50</length>
    <type>Text</type>
</CustomField>