force-app/main/default/objects/Firmante_de_Consentimiento__c/fields/Documento_del_firmante__c.field-meta.xml
<CustomField>
    <fullName>Documento_del_firmante__c</fullName>
    <label>Documento del firmante</label>
    <length>50</length>
    <type>Text</type>
</CustomField>