force-app/main/default/objects/Firmante_de_Consentimiento__c/fields/Domicilio__c.field-meta.xml
<CustomField>
    <fullName>Domicilio__c</fullName>
    <label>Domicilio</label>
    <length>200</length>
    <type>Text</type>
</CustomField>