force-app/main/default/objects/Firmante_de_Consentimiento__c/fields/Historia_clinica__c.field-meta.xml
<CustomField>
    <fullName>Historia_clinica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Historia Clínica</label>
    <referenceTo>Formulario__c</referenceTo>
    <relationshipLabel>Firmantes de Consentimiento</relationshipLabel>
    <relationshipName>Firmantes_de_Consentimiento</relationshipName>
    <type>Lookup</type>
</CustomField>