force-app/main/default/objects/Firmante_de_Consentimiento__c/fields/Nombre_y_Apellido__c.field-meta.xml
<CustomField>
    <fullName>Nombre_y_Apellido__c</fullName>
    <label>Nombre y Apellido</label>
    <length>50</length>
    <type>Text</type>
</CustomField>