force-app/main/default/objects/Firmante_de_Consentimiento__c/fields/Paciente__c.field-meta.xml
<CustomField>
    <fullName>Paciente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Firmantes de Consentimiento</relationshipLabel>
    <relationshipName>Firmantes_de_Consentimiento</relationshipName>
    <type>Lookup</type>
</CustomField>