force-app/main/default/objects/Firmante_de_Consentimiento__c/fields/Relacion_con_el_paciente__c.field-meta.xml
<CustomField>
    <fullName>Relacion_con_el_paciente__c</fullName>
    <label>Relacion con el paciente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>